test/grammar/syntax/general/unnamed/case0/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:1:3
  |
1 | a==
  |   ^ expected one of ["identifier", "literal", "(", "[", "{"] got newline
  |
error[E2L23]: CompileError
 --> ${CWD}/main.k:1:1
  |
1 | a==
  | ^ name 'a' is not defined
  |